Contravariance evaluation for functionType assign + find typeParameters from member assign